--- a/Instruction.html
+++ b/Instruction.html
@@ -14,7 +14,7 @@
 <b:if cond='data:blog.pageType == &quot;static_page&quot;'><data:post.body/></b:if></p>
 
 
-<!--Paste these lines in place of the deleted lines above:-->
+Paste these lines in place of the deleted lines above :
 
 <p>
 <data:post.body/>
